Fix gap between gridRoulette__grid

--- a/src/scss/modules/_grid-roulette.scss
+++ b/src/scss/modules/_grid-roulette.scss
@@ -7,7 +7,7 @@
 
   &__grid {
     display: grid;
-    gap: $sm;
+    gap: $lg;
 
     grid-template-columns: 1fr;
 
